# prisma-engines

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  flake.nix
client/: Makefile  index.js  package-lock.json  package.json
client/prisma/: schema.prisma
introspection-engine/connectors/introspection-connector/src/: lib.rs
introspection-engine/connectors/sql-introspection-connector/src/: introspection_map.rs  lib.rs  rendering.rs  warnings.rs
introspection-engine/connectors/sql-introspection-connector/src/datamodel_calculator/: context.rs
introspection-engine/connectors/sql-introspection-connector/src/introspection/: postgres.rs
introspection-engine/connectors/sql-introspection-connector/src/pair/: default.rs  id.rs  index.rs  index_field.rs  model.rs  scalar_field.rs  view.rs
introspection-engine/datamodel-renderer/src/: value.rs
introspection-engine/introspection-engine-tests/src/: test_api.rs
introspection-engine/introspection-engine-tests/tests/postgres/: extensions.rs
introspection-engine/introspection-engine-tests/tests/rpc_calls/: get_database_description.rs
introspection-engine/introspection-engine-tests/tests/views/: postgresql.rs
libs/dml/src/: field.rs  lib.rs  lift.rs
libs/sql-schema-describer/: Cargo.toml
libs/sql-schema-describer/src/: lib.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs  walkers.rs
libs/sql-schema-describer/tests/describers/: postgres_describer_tests.rs
libs/sql-schema-describer/tests/describers/postgres_describer_tests/: cockroach_describer_tests.rs
migration-engine/connectors/sql-migration-connector/src/: apply_migration.rs  sql_destructive_change_checker.rs  sql_migration.rs  sql_renderer.rs  sql_schema_calculator.rs  sql_schema_differ.rs
migration-engine/connectors/sql-migration-connector/src/sql_renderer/: mssql_renderer.rs  mysql_renderer.rs  postgres_renderer.rs  sqlite_renderer.rs
migration-engine/introspection-engine-tests/: Cargo.toml
migration-engine/introspection-engine-tests/src/: test_api.rs
migration-engine/introspection-engine-tests/tests/cockroachdb/: mod.rs
migration-engine/introspection-engine-tests/tests/rpc_calls/: mod.rs
migration-engine/introspection-engine-tests/tests/views/: postgresql.rs
nix/: all-engines.nix  args.nix  dev-vm.nix  query-engine-tests.nix  shell.nix
prisma-fmt/src/: lib.rs
prisma-schema-wasm/src/: lib.rs
psl/builtin-connectors/src/: postgres_datamodel_connector.rs
psl/builtin-connectors/src/postgres_datamodel_connector/: validations.rs
psl/compiler-cli/src/: main.rs
psl/parser-database/src/: types.rs  walkers.rs
psl/psl-core/src/: lib.rs
psl/psl-core/src/configuration/: datasource.rs
psl/psl/src/: lib.rs
psl/psl/tests/validation/postgres_extensions/: extensions_with_arguments.prisma
quaint/: Cargo.toml
quaint/src/connector/: sqlite.rs
quaint/src/connector/sqlite/: conversion.rs  error.rs
quaint/src/visitor/: sqlite.rs
query-engine/connector-test-kit-rs/query-tests-setup/src/datamodel_rendering/: mod.rs
query-engine/connector-test-kit-rs/query-tests-setup/src/runner/: binary.rs
query-engine/connectors/query-connector/src/: query_arguments.rs  write_args.rs
query-engine/connectors/query-connector/src/filter/: relation.rs
query-engine/connectors/sql-query-connector/src/database/: runtime.rs
query-engine/core/src/: lib.rs
query-engine/core/src/executor/: interpreting_executor.rs
query-engine/core/src/interactive_transactions/: mod.rs
query-engine/core/src/interpreter/: expression.rs  expressionista.rs
query-engine/core/src/query_graph/: mod.rs
query-engine/core/src/query_graph_builder/: builder.rs
query-engine/core/src/telemetry/: helpers.rs  models.rs
query-engine/core/src/telemetry/capturing/: capturer.rs  mod.rs
query-engine/js-connectors/js/: README.md  pnpm-lock.yaml  pnpm-workspace.yaml
query-engine/js-connectors/js/pg-promise-connector/: package.json
query-engine/js-connectors/js/smoke-test-js/: package.json
query-engine/js-drivers/src/: driver.rs  queryable.rs
query-engine/prisma-models/: Cargo.toml
query-engine/prisma-models/src/: composite_type.rs  convert.rs  cursor.rs  error.rs  extensions.rs  field_selection.rs  fields.rs  internal_data_model.rs  internal_enum.rs  lib.rs  model.rs  order_by.rs  parent_container.rs  prelude.rs  record.rs  relation.rs  selection_result.rs
query-engine/prisma-models/src/builders/: model_builder.rs
query-engine/prisma-models/src/field/: composite.rs  mod.rs  relation.rs  scalar.rs
query-engine/prisma-models/src/projections/: model_projection.rs
query-engine/prisma-models/tests/: datamodel_converter_tests.rs
query-engine/query-engine-node-api/: build.rs
query-engine/query-engine-node-api/src/: engine.rs  lib.rs  log_callback.rs  logger.rs
query-engine/query-engine-wasm/: Cargo.toml  build.rs
query-engine/query-engine-wasm/src/: engine.rs  functions.rs  lib.rs
query-engine/query-engine/src/server/: mod.rs
query-engine/request-handlers/: Cargo.toml
query-engine/request-handlers/src/: lib.rs
query-engine/request-handlers/src/graphql/: body.rs  handler.rs
query-engine/request-handlers/src/json_query/: mod.rs  protocol_adapter.rs  query.rs
query-engine/schema-builder-wasm/: Cargo.toml  test.js
query-engine/schema-builder-wasm/src/: enum_type.rs  functions.rs  input_field.rs  input_object_type.rs  lib.rs  object_type.rs  output_field.rs  scalar_type.rs  schema.rs
query-engine/schema-builder/src/: enum_types.rs  lib.rs
query-engine/schema-builder/src/mutations/: create_many.rs  create_one.rs
query-engine/schema/src/: enum_type.rs  output_types.rs
schema-engine/connectors/mongodb-schema-connector/src/: lib.rs
schema-engine/connectors/schema-connector/src/: lib.rs  query_introspection.rs  schema_connector.rs
schema-engine/connectors/sql-schema-connector/src/: flavour.rs  lib.rs
schema-engine/sql-migration-tests/tests/apply_migrations/: mod.rs
schema-engine/sql-migration-tests/tests/introspection/: mod.rs
schema-engine/sql-schema-describer/src/: sqlite.rs
(+24 files in other folders)
