[package]
authors = [
  "Julius de Bruijn <bruijn@prisma.io>",
  "Katharina Fey <kookie@spacekookie.de>",
  "Tom Houlé <tom@tomhoule.com>",
  "Emanuel Jöbstl <emanuel.joebstl@gmail.com>",
  "Matthias Oertel <oertel@prisma.io>",
  "Dominic Petrick <petrick@prisma.io>",
]
description = "An abstraction layer for SQL databases."
documentation = "https://docs.rs/quaint/"
edition = "2021"
homepage = "https://github.com/prisma/quaint/"
keywords = ["mysql", "postgresql", "sqlite", "sql"]
license = "Apache-2.0"
name = "quaint"
readme = "README.md"
repository = "https://github.com/prisma/quaint/"
version = "0.2.0-alpha.13"
resolver = "2"

[package.metadata.docs.rs]
features = ["docs", "all"]

[features]
default = []
docs = []
# Expose the underlying database drivers when a connector is enabled. This is a
# way to access database-specific methods when you need extra control.
expose-drivers = []

all = [
  "chrono",
  "json",
  "mssql",
  "mysql",
  "pooled",
  "postgresql",
  "serde-support",
  "sqlite",
  "uuid",
  "bigdecimal",
]

vendored-openssl = [
  "postgres-native-tls/vendored-openssl",
  "mysql_async/vendored-openssl",
]

postgresql = [
  "native-tls",
  "tokio-postgres",
  "postgres-types",
  "postgres-native-tls",
  "bytes",
  "tokio",
  "bit-vec",
  "lru-cache",
  "byteorder",
]

json = ["serde_json", "base64"]
mssql = ["tiberius", "uuid", "chrono", "tokio-util", "tokio/time", "tokio/net", "either"]
mysql = ["mysql_async", "tokio/time", "lru-cache"]
pooled = ["mobc"]
serde-support = ["serde", "chrono/serde"]
sqlite = ["libsql", "tokio/sync"]
bigdecimal = ["bigdecimal_"]
fmt-sql = ["sqlformat"]

[dependencies]
connection-string = "0.2"
percent-encoding = "2"
tracing = "0.1"
tracing-core = "0.1"
async-trait = "0.1"
thiserror = "1.0"
num_cpus = "1.12"
metrics = "0.18"
futures = "0.3"
url = "2.1"
hex = "0.4"

either = { version = "1.6", optional = true }
base64 = { version = "0.12.3", optional = true }
chrono = { version = "0.4", optional = true, default-features = false }
lru-cache = { version = "0.1", optional = true }
serde_json = { version = "1.0.48", optional = true, features = ["float_roundtrip"] }
native-tls = { version = "0.2", optional = true }
bit-vec = { version = "0.6.1", optional = true }
bytes = { version = "1.0", optional = true }
mobc = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }
sqlformat = { version = "0.2.0", optional = true }

[dev-dependencies]
once_cell = "1.3"
indoc = "0.3"
names = "0.11"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
test-macros = { path = "test-macros" }
test-setup = { path = "test-setup" }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }

[dependencies.byteorder]
default-features = false
optional = true
version = ">1.4.0"

[dependencies.mysql_async]
git = "https://github.com/prisma/mysql_async"
optional = true
branch = "vendored-openssl"

[dependencies.libsql]
version = "0.1"
git = "https://github.com/aqrln/libsql"
rev = "77c8b71481ebac0dbfa928f5c108fcd00d64ed81"
# path = "/home/aqrln/git/libsql/crates/core"
optional = true

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies.tiberius]
version = "0.11.6"
optional = true
features = ["sql-browser-tokio", "chrono", "bigdecimal"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.tiberius]
version = "0.11.2"
optional = true
default-features = false
features = ["sql-browser-tokio", "vendored-openssl", "chrono", "bigdecimal", "tds73", "winauth"]

[dependencies.bigdecimal_]
version = "0.3"
optional = true
package = "bigdecimal"

[dependencies.uuid]
version = "1"
optional = true

[dependencies.tokio-postgres]
features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1", "with-bit-vec-0_6"]
git = "https://github.com/prisma/rust-postgres"
branch = "pgbouncer-mode"
optional = true

[dependencies.postgres-types]
features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1", "with-bit-vec-0_6"]
git = "https://github.com/prisma/rust-postgres"
branch = "pgbouncer-mode"
optional = true

[dependencies.postgres-native-tls]
git = "https://github.com/prisma/rust-postgres"
branch = "pgbouncer-mode"
optional = true

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros", "sync"]
optional = true

[dependencies.tokio-util]
version = "0.6"
features = ["compat"]
optional = true

[patch.crates-io]
tonic = { git = "https://github.com/hyperium/tonic" }
