[package]
name = "introspection-engine-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
sql-introspection-connector = { path = "../../introspection-engine/connectors/sql-introspection-connector" }
migration-connector = { path = "../connectors/migration-connector" }
migration-core = { path = "../core" }
sql-migration-connector = { path = "../connectors/sql-migration-connector" }
introspection-connector = { path = "../../introspection-engine/connectors/introspection-connector" }
sql-schema-describer = { path = "../../libs/sql-schema-describer" }
psl.workspace = true
test-macros = { path = "../../libs/test-macros" }
user-facing-errors = { path = "../../libs/user-facing-errors" }
test-setup = { path = "../../libs/test-setup" }

enumflags2 = "0.7"
connection-string = "0.1"
pretty_assertions = "1"
tracing-futures = "0.2"
tokio.workspace = true
serde_json = { version = "1.0", features = ["float_roundtrip"] }
tracing = "0.1"
indoc = "1"
expect-test = "1.1.0"
url = "2"
quaint.workspace = true

[dependencies.barrel]
git = "https://github.com/prisma/barrel.git"
features = ["sqlite3", "mysql", "pg", "mssql"]
branch = "mssql-support"
