[package]
name = "schema-builder-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.83"
wasm-logger = { version = "0.2.0", optional = true }
js-sys = "0.3.60"
schema-builder = { path = "../schema-builder" }
schema = { path = "../schema" }
psl.workspace = true
prisma-models = { path = "../prisma-models" }
